Test thumb parsing for more zarrs

--- a/public/samples/sample_zarrs.yaml
+++ b/public/samples/sample_zarrs.yaml
@@ -8,3 +8,9 @@ sample:
     - https://uk1s3.embassy.ebi.ac.uk/ebi-ngff-challenge-2024/7cc10a97-23f1-4e3e-80f2-d91dc39f2ab9.zarr
     - https://uk1s3.embassy.ebi.ac.uk/ebi-ngff-challenge-2024/2a544b69-9ddd-4941-9801-fd406d06880c.zarr
     - https://uk1s3.embassy.ebi.ac.uk/ebi-ngff-challenge-2024/c9ba2bf5-09d1-41ff-a925-df0b725a53e4.zarr
+    - https://uk1s3.embassy.ebi.ac.uk/idr/share/ome2024-ngff-challenge/idr0157/Riccia sorocarpa SWE/IMG_0069 Riccia sorocarpa stature.ome.zarr
+    - https://uk1s3.embassy.ebi.ac.uk/idr/share/ome2024-ngff-challenge/idr0157/Riccia sorocarpa SWE/IMG_2471-2570 Riccia sorocarpa thallus with epidermis cross section (40x DIC).ome.zarr
+    - https://uk1s3.embassy.ebi.ac.uk/idr/share/ome2024-ngff-challenge/idr0157/Riccia sorocarpa SWE/IMG_1811-1870 Riccia sorocarpa thallus cross section (10x).ome.zarr
+    - https://uk1s3.embassy.ebi.ac.uk/idr/share/ome2024-ngff-challenge/idr0066/ExpD_chicken_embryo_MIP.ome.zarr
+    - https://uk1s3.embassy.ebi.ac.uk/idr/share/ome2024-ngff-challenge/idr0066/ExpA_VIP_ASLM_on_XZ_slice1088.zarr
+    - https://uk1s3.embassy.ebi.ac.uk/idr/share/ome2024-ngff-challenge/idr0051/180712_H2B_22ss_Courtney1_20180712-163837_p00_c00_preview.zarr 
