--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,8 @@
-sample:
+config:
+    title: "Named OME-Zarr Collections" 
+    description: "This is a lightweight viewer to share collections of OME-Zarr datasets with basic descriptions.\n Clone the <a href='https://github.com/lubianat/zowser/' target='_blank'>repo</a>, change the config, build with GitHub Pages. "
+samples:
     - https://uk1s3.embassy.ebi.ac.uk/ebi-ngff-challenge-2024/c0e5d621-62cc-43a6-9dad-2ddab8959d17.zarr
-    - https://uk1s3.embassy.ebi.ac.uk/ebi-ngff-challenge-2024/4ffaeed2-fa70-4907-820f-8a96ef683095.zarr
     - https://uk1s3.embassy.ebi.ac.uk/ebi-ngff-challenge-2024/fb416517-e36d-4bdb-98f9-47b644138d47.zarr
     - https://uk1s3.embassy.ebi.ac.uk/ebi-ngff-challenge-2024/79ad519b-0aa6-4d64-85a9-6cea2318b980.zarr
     - https://uk1s3.embassy.ebi.ac.uk/ebi-ngff-challenge-2024/eea08413-3c5e-4fae-b4fb-02c7c5ebb8a4.zarr
@@ -8,9 +10,15 @@ sample:
     - https://uk1s3.embassy.ebi.ac.uk/ebi-ngff-challenge-2024/7cc10a97-23f1-4e3e-80f2-d91dc39f2ab9.zarr
     - https://uk1s3.embassy.ebi.ac.uk/ebi-ngff-challenge-2024/2a544b69-9ddd-4941-9801-fd406d06880c.zarr
     - https://uk1s3.embassy.ebi.ac.uk/ebi-ngff-challenge-2024/c9ba2bf5-09d1-41ff-a925-df0b725a53e4.zarr
-    - https://uk1s3.embassy.ebi.ac.uk/idr/share/ome2024-ngff-challenge/idr0157/Riccia sorocarpa SWE/IMG_0069 Riccia sorocarpa stature.ome.zarr
     - https://uk1s3.embassy.ebi.ac.uk/idr/share/ome2024-ngff-challenge/idr0157/Riccia sorocarpa SWE/IMG_2471-2570 Riccia sorocarpa thallus with epidermis cross section (40x DIC).ome.zarr
     - https://uk1s3.embassy.ebi.ac.uk/idr/share/ome2024-ngff-challenge/idr0157/Riccia sorocarpa SWE/IMG_1811-1870 Riccia sorocarpa thallus cross section (10x).ome.zarr
     - https://uk1s3.embassy.ebi.ac.uk/idr/share/ome2024-ngff-challenge/idr0066/ExpD_chicken_embryo_MIP.ome.zarr
     - https://uk1s3.embassy.ebi.ac.uk/idr/share/ome2024-ngff-challenge/idr0066/ExpA_VIP_ASLM_on_XZ_slice1088.zarr
     - https://uk1s3.embassy.ebi.ac.uk/idr/share/ome2024-ngff-challenge/idr0051/180712_H2B_22ss_Courtney1_20180712-163837_p00_c00_preview.zarr 
+extended_samples:
+    - name: HeLa cells
+      description: Small dataset, 2 channels. HeLa cells showing click chemistry and immunofluorescence. Note that metadata shows TaxonID 9601, likely a typo. Correct entry should be for human, 9606.
+      url: https://uk1s3.embassy.ebi.ac.uk/ebi-ngff-challenge-2024/4ffaeed2-fa70-4907-820f-8a96ef683095.zarr
+    - name: Riccia sorocarpa - photograph
+      description: From a series of bryophyte data on IDR, it shows how OME-Zarr can fit other kinds of images beyond microscopy.  
+      url: https://uk1s3.embassy.ebi.ac.uk/idr/share/ome2024-ngff-challenge/idr0157/Riccia sorocarpa SWE/IMG_0069 Riccia sorocarpa stature.ome.zarr
