--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "canvas": "^3.2.0",
     "papaparse": "^5.4.1",
     "svelte-tiny-virtual-list": "^2.1.2",
+    "yaml": "^2.8.1",
     "zarrita": "^0.4.0-next.15"
   }
 }
