Add support for more variety of valid ome-zarrs
Using examples from IDR, process a larger variety of valid OME-Zarrs.

Also display their kinds with extra detail.

--- a/config.yaml
+++ b/config.yaml
@@ -15,6 +15,15 @@ samples:
     - https://uk1s3.embassy.ebi.ac.uk/idr/share/ome2024-ngff-challenge/idr0066/ExpD_chicken_embryo_MIP.ome.zarr
     - https://uk1s3.embassy.ebi.ac.uk/idr/share/ome2024-ngff-challenge/idr0066/ExpA_VIP_ASLM_on_XZ_slice1088.zarr
     - https://uk1s3.embassy.ebi.ac.uk/idr/share/ome2024-ngff-challenge/idr0051/180712_H2B_22ss_Courtney1_20180712-163837_p00_c00_preview.zarr 
+    - https://uk1s3.embassy.ebi.ac.uk/idr/zarr/v0.5/idr0033A/BR00109990_C2.zarr
+    - https://uk1s3.embassy.ebi.ac.uk/idr/zarr/v0.5/idr0010/76-45.ome.zarr
+    - https://uk1s3.embassy.ebi.ac.uk/idr/zarr/v0.5/idr0090/190129.zarr
+    - https://uk1s3.embassy.ebi.ac.uk/idr/zarr/v0.5/idr0066/ExpD_chicken_embryo_MIP.ome.zarr
+    - https://uk1s3.embassy.ebi.ac.uk/idr/zarr/v0.5/idr0066/ExpA_VIP_ASLM_on.zarr
+    - https://uk1s3.embassy.ebi.ac.uk/idr/zarr/v0.5/idr0062A/6001240_labels.zarr
+    - https://uk1s3.embassy.ebi.ac.uk/idr/zarr/v0.5/idr0157/Asterella gracilis SWE/IMG_1033-1112 Asterella gracilis (Mannia gracilis) stature.ome.zarr
+    - https://uk1s3.embassy.ebi.ac.uk/idr/zarr/v0.5/idr0051/180712_H2B_22ss_Courtney1_20180712-163837_p00_c00_preview.zarr
+    - https://uk1s3.embassy.ebi.ac.uk/idr/zarr/v0.5/idr0083/9822152.zarr
 extended_samples:
     - name: HeLa cells
       description: Small dataset, 2 channels. HeLa cells showing click chemistry and immunofluorescence. Note that metadata shows TaxonID 9601, likely a typo. Correct entry should be for human, 9606.
@@ -22,3 +31,6 @@ extended_samples:
     - name: Riccia sorocarpa - photograph
       description: From a series of bryophyte data on IDR, it shows how OME-Zarr can fit other kinds of images beyond microscopy.  
       url: https://uk1s3.embassy.ebi.ac.uk/idr/share/ome2024-ngff-challenge/idr0157/Riccia sorocarpa SWE/IMG_0069 Riccia sorocarpa stature.ome.zarr
+    - name: IDR image with labels
+      description: 6001240_labels.zarr labels. They are also shown in an OME-Zarr format. Labels do not correspond to image acquisions, but draw regions of interest in the same dimensions as the original image.
+      url: https://uk1s3.embassy.ebi.ac.uk/idr/zarr/v0.5/idr0062A/6001240_labels.zarr/labels/0
