--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "ajv": "^8.11.0",
     "canvas": "^3.2.0",
+    "ome-zarr.js": "^0.0.17-0.6dev2",
     "papaparse": "^5.4.1",
     "svelte-tiny-virtual-list": "^2.1.2",
     "yaml": "^2.8.1",
